--- a/web/templates/results.html
+++ b/web/templates/results.html
@@ -38,6 +38,13 @@
             <div>{{predicted_price}}</div>
             <h3>Predicted Price Trend:</h3>
             <div>{{predicted_trend}}% change in the next year</div>
+            <div class="spacing"></div>
+            <hr/>
+            <div class="spacing"></div>
+            <h3>Plots</h3>
+            <img src="{{viz_1_url}}" alt="Visualization 1 Unavailable">
+            <div class="spacing"></div>
+            <img src="{{viz_2_url}}" alt="Visualization 2 Unavailable">
         </div>
       </div>
     </div>
